nueva rama miaw!!!

--- a/ETL_reviews.ipynb
+++ b/ETL_reviews.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline de ETL de los archivos del Set \"reviews\" para exportación de archivos finales filtrados por categorias( usando \"gmap_id\"), eliminando la columna \"pics\" por ser irrelevante y poseer más del 80% de nulos."
+    "# Pipeline de ETL de los archivos del Set \"reviews\" para exportación de archivos finales filtrados por categorias( usando \"gmap_id\"), eliminando la columna \"Pics\" por ser irrelevante y poseer más del 80% de nulos."
    ]
   },
   {
@@ -162,7 +162,7 @@
     }
    ],
    "source": [
-    "# Check miaw :3\n",
+    "\n",
     "gmap_app"
    ]
   },
@@ -589,7 +589,7 @@
     }
    ],
    "source": [
-    "# Almways Check miaw :3\n",
+    "\n",
     "df_reviews_Hawaii"
    ]
   },
@@ -811,7 +811,7 @@
     }
    ],
    "source": [
-    "# Mega Check miaw :3\n",
+    "\n",
     "df_reviews_Hawaii"
    ]
   },
@@ -866,6 +866,209 @@
     "        df2.drop(\"pics\", axis=1, inplace=True)\n",
     "        df2 = df2[df2['gmap_id'].isin(gmap_app['gmap_id'])]\n",
     "        df2.to_json(f'{carpeta}reviews_filtered/{lista}_final.json', orient=\"records\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>time</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>text</th>\n",
+       "      <th>resp</th>\n",
+       "      <th>gmap_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>100727319150749309755</td>\n",
+       "      <td>Tiyana Fernandez</td>\n",
+       "      <td>1624672590351</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The owner Michelle is a great colorist and sty...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c006f4a2bf83f7d:0x192f04f2b228fefe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>105106921639099579780</td>\n",
+       "      <td>Valerie Ho</td>\n",
+       "      <td>1591052180332</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Jaye did a great job.</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c006f4a2bf83f7d:0x192f04f2b228fefe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>109506251871756585891</td>\n",
+       "      <td>Jorge Molina</td>\n",
+       "      <td>1559979083979</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Great sevice,very clean and polite employees.</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c006f4a2bf83f7d:0x192f04f2b228fefe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>117078108666370229772</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1570898160523</td>\n",
+       "      <td>2</td>\n",
+       "      <td>This place is very dated and the lighting is a...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c006f4a2bf83f7d:0x192f04f2b228fefe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>117534028244404565929</td>\n",
+       "      <td>Jaime Cadena</td>\n",
+       "      <td>1517450465512</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Great place for men or women. Several stylists...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c006f4a2bf83f7d:0x192f04f2b228fefe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169726</th>\n",
+       "      <td>109238178190079517392</td>\n",
+       "      <td>Nob Ikeda</td>\n",
+       "      <td>1560217202161</td>\n",
+       "      <td>4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c004fe125669a03:0xf75d0a9729dc753e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169727</th>\n",
+       "      <td>109742384609843617700</td>\n",
+       "      <td>Stu Brodie</td>\n",
+       "      <td>1544544133960</td>\n",
+       "      <td>5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c004fe125669a03:0xf75d0a9729dc753e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169728</th>\n",
+       "      <td>107782244543332195706</td>\n",
+       "      <td>Edwin Nieves</td>\n",
+       "      <td>1560647230465</td>\n",
+       "      <td>5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c004fe125669a03:0xf75d0a9729dc753e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169729</th>\n",
+       "      <td>101466313397188830981</td>\n",
+       "      <td>Marion</td>\n",
+       "      <td>1553207079785</td>\n",
+       "      <td>5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c004fe125669a03:0xf75d0a9729dc753e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169730</th>\n",
+       "      <td>105678424652023151807</td>\n",
+       "      <td>Tea Didikai</td>\n",
+       "      <td>1567537967498</td>\n",
+       "      <td>5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x7c004fe125669a03:0xf75d0a9729dc753e</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>35336 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      user_id              name           time  rating  \\\n",
+       "23      100727319150749309755  Tiyana Fernandez  1624672590351       5   \n",
+       "24      105106921639099579780        Valerie Ho  1591052180332       5   \n",
+       "25      109506251871756585891      Jorge Molina  1559979083979       4   \n",
+       "26      117078108666370229772                 B  1570898160523       2   \n",
+       "27      117534028244404565929      Jaime Cadena  1517450465512       5   \n",
+       "...                       ...               ...            ...     ...   \n",
+       "169726  109238178190079517392         Nob Ikeda  1560217202161       4   \n",
+       "169727  109742384609843617700        Stu Brodie  1544544133960       5   \n",
+       "169728  107782244543332195706      Edwin Nieves  1560647230465       5   \n",
+       "169729  101466313397188830981            Marion  1553207079785       5   \n",
+       "169730  105678424652023151807       Tea Didikai  1567537967498       5   \n",
+       "\n",
+       "                                                     text  resp  \\\n",
+       "23      The owner Michelle is a great colorist and sty...  None   \n",
+       "24                                  Jaye did a great job.  None   \n",
+       "25          Great sevice,very clean and polite employees.  None   \n",
+       "26      This place is very dated and the lighting is a...  None   \n",
+       "27      Great place for men or women. Several stylists...  None   \n",
+       "...                                                   ...   ...   \n",
+       "169726                                               None  None   \n",
+       "169727                                               None  None   \n",
+       "169728                                               None  None   \n",
+       "169729                                               None  None   \n",
+       "169730                                               None  None   \n",
+       "\n",
+       "                                      gmap_id  \n",
+       "23      0x7c006f4a2bf83f7d:0x192f04f2b228fefe  \n",
+       "24      0x7c006f4a2bf83f7d:0x192f04f2b228fefe  \n",
+       "25      0x7c006f4a2bf83f7d:0x192f04f2b228fefe  \n",
+       "26      0x7c006f4a2bf83f7d:0x192f04f2b228fefe  \n",
+       "27      0x7c006f4a2bf83f7d:0x192f04f2b228fefe  \n",
+       "...                                       ...  \n",
+       "169726  0x7c004fe125669a03:0xf75d0a9729dc753e  \n",
+       "169727  0x7c004fe125669a03:0xf75d0a9729dc753e  \n",
+       "169728  0x7c004fe125669a03:0xf75d0a9729dc753e  \n",
+       "169729  0x7c004fe125669a03:0xf75d0a9729dc753e  \n",
+       "169730  0x7c004fe125669a03:0xf75d0a9729dc753e  \n",
+       "\n",
+       "[35336 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_reviews_Hawaii"
    ]
   }
  ],
